--- a/style.css
+++ b/style.css
@@ -15,8 +15,35 @@ body {
 }
 
 .container {
-  width: 960px;
-  padding: 0 20px;
+  width: 1000px;
+  margin: 0 auto;
+
+  background-color: #ffffff;
+}
+
+.box {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.main-header {
+  width: 1000px;
   margin: 0 auto;
 }
 
@@ -55,4 +82,75 @@ body {
   font-size: 50px;
   font-weight: 700;
   color: #ffffff;
+}
+
+.franchise {
+  margin-bottom: 30px;
+  padding-top: 250px;
+}
+
+.franchise p {
+  position: relative;
+  
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.laptop {
+  content: "";
+  position: absolute;
+  top: -440px;
+  left: 40px;
+
+  width: 722px;
+  height: 410px;
+
+  background-image: url("img/laptop.png");
+}
+
+.laptop-link {
+  position: absolute;
+  top: 150px;
+  left: 220px;
+
+  color: #5c37ef;
+}
+
+.franchise ul {
+  margin: 0;
+  padding: 0;
+  padding-left: 16px;
+
+}
+
+.franchise span {
+  color: #a8a8a8;
+}
+
+.score-text {
+  padding-top: 20px;
+  padding-bottom: 25px;
+
+  text-align: center;
+
+  background-color: #f7f8fa;
+}
+
+.score-text h2 {
+  margin: 0;
+
+  font-size: 16px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+.score-text a {
+  color: #396ea9;
+}
+
+.score-text p {
+  margin: 0;
+
+  font-size: 24px;
+  line-height: 36px;  
 }
