--- a/style.css
+++ b/style.css
@@ -26,20 +26,25 @@ body {
   margin: 0 auto;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .visually-hidden:not(:focus):not(:active) {
-    position: absolute;
+  position: absolute;
 
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-    white-space: nowrap;
+  white-space: nowrap;
 
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .main-header {
@@ -49,8 +54,12 @@ body {
 
 .main-logo {
   display: inline-block;
-  padding: 20px 0;
-
+  width: 127px;
+  height: 22px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;  
+  
   vertical-align: middle;
 }
 
@@ -120,7 +129,6 @@ body {
   margin: 0;
   padding: 0;
   padding-left: 16px;
-
 }
 
 .franchise span {
@@ -134,6 +142,7 @@ body {
   text-align: center;
 
   background-color: #f7f8fa;
+  border-radius: 4px;
 }
 
 .score-text h2 {
@@ -211,6 +220,7 @@ body {
 
   padding: 24px 135px 30px;
   background-color: #fff4b3;
+  border-radius: 4px;
 }
 
 .form h2 {
@@ -241,8 +251,21 @@ body {
   width: 360px;
   padding: 10px;
 
+  font-size: 14px;
+  color: #000000;
+
   border: 1px solid #a6acb2;
   border-radius: 4px;
+}
+
+.form input:hover,
+.form input:focus  {
+  outline: 0;
+  box-shadow: 0 0 10px 0px rgb(88, 205, 244);
+}
+
+.form ::placeholder {
+  color: #b2b2b2;
 }
 
 .button {
@@ -256,10 +279,35 @@ body {
   vertical-align: middle;
   color: #ffffff;
 
-  background-color: #0d972b;
-  opacity: 0.3;
+  background-color: #0d972b;  
   border: none;
   border-radius: 4px;
+  opacity: 0.3;
   cursor: pointer;
+}
 
+.last-text {  
+  padding-top: 27px;
+  padding-bottom: 55px;
+}
+
+.last-text p {
+  margin: 0;
+}
+
+.main-footer,
+.main-footer .container {
+  background-color: #000000;
+}
+
+.footer-logo {
+  display: inline-block;
+  width: 22px;
+  height: 22px;  
+  margin-top: 19px;
+  margin-bottom: 19px;
+  margin-left: 20px;
+  
+
+  vertical-align: middle;
 }
