--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
   margin: 0 auto;
 
   background-color: #ffffff;
+  -webkit-box-shadow: 0 0 15px 0 rgba(0 , 0 , 0, 0.1);
+          box-shadow: 0 0 15px 0 rgba(0 , 0 , 0, 0.1);
 }
 
 .box {
@@ -79,7 +81,7 @@ img {
 
 .slogan h1 {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 37px;
 
   font-size: 30px;
   line-height: 60px;
@@ -97,20 +99,20 @@ img {
 
 .franchise {
   margin-bottom: 30px;
-  padding-top: 250px;
+  padding-top: 253px;
 }
 
 .franchise p {
   position: relative;
   
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
 }
 
 .laptop {
   content: "";
   position: absolute;
-  top: -440px;
+  top: -443px;
   left: 40px;
 
   width: 722px;
@@ -121,7 +123,7 @@ img {
 
 .laptop-link {
   position: absolute;
-  top: 150px;
+  top: 155px;
   left: 220px;
 
   color: #5c37ef;
@@ -138,8 +140,8 @@ img {
 }
 
 .score-text {
-  padding-top: 20px;
-  padding-bottom: 25px;
+  padding-top: 25px;
+  padding-bottom: 23px;
 
   text-align: center;
 
@@ -184,7 +186,7 @@ img {
 
 .index-columns h2 {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 
   font-size: 24px;
   line-height: 24px;
@@ -192,6 +194,7 @@ img {
 }
 
 .index-columns ul {
+  margin: 0;
   padding-left: 16px;
 }
 
@@ -199,12 +202,16 @@ img {
   margin-bottom: 10px;
 }
 
+.index-columns li:nth-child(2) {
+  margin-bottom: 14px;
+}
+
 .index-columns dl {
   margin: 0;
 }
 
 .index-columns dt {
-  margin-bottom: 6px;
+  margin-bottom: 10px;
 
   font-size: 40px;
   line-height: 36px;
@@ -225,14 +232,14 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 
-  padding: 24px 135px 30px;
+  padding: 30px 135px 25px;
   background-color: #fff4b3;
   border-radius: 4px;
 }
 
 .form h2 {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 26px;
 
   font-size: 16px;
   text-align: center;
@@ -245,19 +252,19 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
 }
 
 .form label {
-  width: 170px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 166px;
+  padding-left: 6px;
 
   font-size: 14px;
   line-height: 32px;
@@ -268,6 +275,7 @@ img {
           box-sizing: border-box;
   width: 360px;
   padding: 10px;
+  padding-left: 17px;
 
   font-size: 14px;
   color: #000000;
@@ -308,7 +316,7 @@ img {
           box-sizing: border-box;
   display: inline-block;
   width: 160px;
-  margin-left: 170px;
+  margin-left: 166px;
   padding: 11px 10px;
 
   text-align: center;
